# sphinx-simplepdf

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml
.github/workflows/: ci.yaml
demo/: conf.py  demo.rst  doc-requirements.txt  images.rst  lists_tables.rst  needs.json  sphinx_needs.rst
demo/test_py_module/: test.py
docs/: building.rst  changelog.rst  conf.py  directives.rst  doc-requirements.txt  if_pdf_include.rst  index.rst  tech_details.rst
docs/examples/: sphinx_needs.rst
sphinx_simplepdf/: __init__.py
sphinx_simplepdf/builders/: debug.py  simplepdf.py
sphinx_simplepdf/directives/: ifbuilder.py  ifinclude.py  pdfinclude.py
sphinx_simplepdf/themes/simplepdf_theme/: __init__.py  debug.html  page.html
sphinx_simplepdf/themes/simplepdf_theme/static/styles/sources/: _back-cover.scss  _fonts.scss  _lists.scss  _tables.scss  _text.scss  _toc.scss
sphinx_simplepdf/writers/: simplepdf.py
tests/: __init__.py  conftest.py  imgcompare.py  test_basic_build.py  test_html_processing.py  test_pdf_generation.py  test_theme_features.py  test_warnings.py  utils.py
tests/doc_test/basic_doc/: conf.py  content.rst  index.rst
tests/doc_test/with_images/: conf.py  index.rst
tests/doc_test/with_images/_static/: .gitkeep
tests/doc_test/with_issues/: broken_anchors.rst  conf.py  index.rst
tests/doc_test/with_toc/: chapter1.rst  chapter2.rst  conf.py  index.rst
tests/doc_test/with_toc/_static/: custom.css
tests/doc_test/with_toc_and_typo/: chapter2.rst  conf.py  index.rst
